--- a/.project
+++ b/.project
@@ -34,9 +34,29 @@
 			<locationURI>$%7BPARENT-4-PROJECT_LOC%7D/STM32Cube/Repository/STM32Cube_FW_F3_V1.10.0/Drivers/STM32F3xx_HAL_Driver/Src/stm32f3xx_hal.c</locationURI>
 		</link>
 		<link>
+			<name>Drivers/STM32F3xx_HAL_Driver/stm32f3xx_hal_adc.c</name>
+			<type>1</type>
+			<locationURI>$%7BPARENT-4-PROJECT_LOC%7D/STM32Cube/Repository/STM32Cube_FW_F3_V1.10.0/Drivers/STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_adc.c</locationURI>
+		</link>
+		<link>
+			<name>Drivers/STM32F3xx_HAL_Driver/stm32f3xx_hal_adc_ex.c</name>
+			<type>1</type>
+			<locationURI>$%7BPARENT-4-PROJECT_LOC%7D/STM32Cube/Repository/STM32Cube_FW_F3_V1.10.0/Drivers/STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_adc_ex.c</locationURI>
+		</link>
+		<link>
 			<name>Drivers/STM32F3xx_HAL_Driver/stm32f3xx_hal_cortex.c</name>
 			<type>1</type>
 			<locationURI>$%7BPARENT-4-PROJECT_LOC%7D/STM32Cube/Repository/STM32Cube_FW_F3_V1.10.0/Drivers/STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_cortex.c</locationURI>
+		</link>
+		<link>
+			<name>Drivers/STM32F3xx_HAL_Driver/stm32f3xx_hal_dac.c</name>
+			<type>1</type>
+			<locationURI>$%7BPARENT-4-PROJECT_LOC%7D/STM32Cube/Repository/STM32Cube_FW_F3_V1.10.0/Drivers/STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_dac.c</locationURI>
+		</link>
+		<link>
+			<name>Drivers/STM32F3xx_HAL_Driver/stm32f3xx_hal_dac_ex.c</name>
+			<type>1</type>
+			<locationURI>$%7BPARENT-4-PROJECT_LOC%7D/STM32Cube/Repository/STM32Cube_FW_F3_V1.10.0/Drivers/STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_dac_ex.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/STM32F3xx_HAL_Driver/stm32f3xx_hal_dma.c</name>
